--- a/jennifer/css/style.css
+++ b/jennifer/css/style.css
@@ -1,252 +1,266 @@
 body {
-    margin: 0;
+	margin: 0;
 }
 .search {
-    position: absolute;
-    width: auto !important;
-    float: right;
-    margin-right: 20px;
-    margin-left: 20px;
-    right: 5px;
-    top: 20px;
+	position: absolute;
+	width: auto !important;
+	float: right;
+	margin-right: 20px;
+	margin-left: 20px;
+	right: 5px;
+	top: 20px;
 }
 
 .search .search-bar {
-    display: inline-block;
-    position: relative;
-    top: -3px;
-    left: -5px; 
+	display: inline-block;
+	position: relative;
+	top: -3px;
+	left: -5px;
 }
 
 .search .search-input {
-    border: 2px solid #000000;
-    font-weight: 300;
-    display: inline-block;
-    margin-bottom: 0;
-    padding: 2px 4px;
-    width: 170px;
-    min-width: 0;
-    font-size: 14px;
+	border: 2px solid #000000;
+	font-weight: 300;
+	display: inline-block;
+	margin-bottom: 0;
+	padding: 2px 4px;
+	width: 170px;
+	min-width: 0;
+	font-size: 14px;
 }
 
 .search i {
-    font-size: 20px;
-    padding: 4px;
-    color:#000000;
+	font-size: 20px;
+	padding: 4px;
+	color: #000000;
 }
 
 .menu {
-    text-align: center;
-    padding-top: 50px;
+	text-align: center;
+	padding-top: 50px;
 }
 
 .menu ul {
-    display: block;
-    width: 100%;
-    margin: 0px;
-    padding: 0px;
+	display: block;
+	width: 100%;
+	margin: 0px;
+	padding: 0px;
 }
 
 .menu ul li {
-    display: inline-block;
-    list-style: none;
-    color: black;
-    padding: 10px;
-    text-align: center;
-    font-family: menufont;
-    font-size: 20px;
-    position: relative;
-    font-size: 1.28rem !important;
+	display: inline-block;
+	list-style: none;
+	color: black;
+	padding: 10px;
+	text-align: center;
+	font-family: menufont;
+	font-size: 20px;
+	position: relative;
+	font-size: 1.28rem !important;
 }
 
 .title {
-    font-family: titlebold;
-    font-size: 25px;
+	font-family: titlebold;
+	font-size: 25px;
 }
 
 a {
-    text-decoration: none;
-    color:black;
+	text-decoration: none;
+	color: black;
 }
 
 ::placeholder {
-    color:#000000;
+	color: #000000;
 }
 
 .flex-content {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 15px;
+	display: flex;
+	justify-content: space-between;
+	padding-top: 15px;
 }
 
 .flex-content .image {
-    width: 50%;
+	width: 50%;
+	background-image: url('https://shine.snugdesigns.co.uk/wp-content/uploads/2019/08/annie-spratt-1365775-unsplash-1000x1000.jpg');
+	background-size: 100%;
+	/*! height: 800px; */
+	height: 45vw;
+	background-repeat: no-repeat;
+	background-position: center;
+	animation: slideshow 10s linear infinite;
+}
+
+@keyframes slideshow {
+	0% {
+		background-image: url('../images/border.png');
+	}
+	100% {
+		background-image: url('https://shine.snugdesigns.co.uk/wp-content/uploads/2019/08/annie-spratt-1365775-unsplash-1000x1000.jpg');
+	}
 }
 
 .flex-content .content {
-    width: 50%;
-    text-align: center;
-    padding-top: 15%;
-    background-color: #319D5C;
+	width: 50%;
+	text-align: center;
+	padding-top: 15%;
+	background-color: #319d5c;
 }
 
 .flex-content .image img {
-    max-width: 100%;  
-    display:block;
+	max-width: 100%;
+	display: block;
 }
 
 .content .content-title {
-    font-family: menuFont;
-    font-size:30px;
+	font-family: menuFont;
+	font-size: 30px;
 }
 
 .flex-content .content .content-fill {
-    font-family: menuFont;
-    font-size: 20px;
-    padding-bottom: 20px;
+	font-family: menuFont;
+	font-size: 20px;
+	padding-bottom: 20px;
 }
 
 a.read-more {
-    padding: 1.1em 0;
-    font-family: menuFont;
-    font-size:20px;
+	padding: 1.1em 0;
+	font-family: menuFont;
+	font-size: 20px;
 }
 
 a.read-more:hover {
-    color:red;
+	color: red;
 }
 
-
-
 .content-aboutus {
-    text-align: center !important;
-    padding-top: 64px;
-    padding-bottom: 64px;
+	text-align: center !important;
+	padding-top: 64px;
+	padding-bottom: 64px;
 }
 
 .content-aboutus h2 {
-    font-size: 28pt;
-    line-height: 28pt;
-    font-size: menuFont;
-    font-weight: 300 !important;
+	font-size: 28pt;
+	line-height: 28pt;
+	font-size: menuFont;
+	font-weight: 300 !important;
 }
 
 .content-aboutus p {
-    max-width: 750px;
-    margin-left:auto;
-    margin-right:auto;
-    font-size: menuFont;
-    font-size: 20px;
-    font-weight: 300;
+	max-width: 750px;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: menuFont;
+	font-size: 20px;
+	font-weight: 300;
 }
 
 .container-fluid {
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+	width: 100%;
+	padding-right: 15px;
+	padding-left: 15px;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 .container-fluid .content-fluid {
-    display:flex;
-    margin-right: -15px;
-    margin-left: -15px;
-    width: 100%;
+	display: flex;
+	margin-right: -15px;
+	margin-left: -15px;
+	width: 100%;
 }
 
 .panel-tile {
-    background-color: #ED9C9D !important;
-    max-height: 642px !important;
-    /*! max-width: 50%; */
-    max-width: 50%;
-    flex: 50%;
+	background-color: #ed9c9d !important;
+	max-height: 642px !important;
+	/*! max-width: 50%; */
+	max-width: 50%;
+	flex: 50%;
 }
 
 .central-content {
-    width: 100%;
-    text-align: center;
-    padding-top: 120px;
-    padding-bottom: 120px;
-    position: relative;
-    top: 10%;
+	width: 100%;
+	text-align: center;
+	padding-top: 120px;
+	padding-bottom: 120px;
+	position: relative;
+	top: 10%;
 }
 
 .central-content .eyes {
-    width: 120px;
-    padding-bottom: 10px;
-    max-width: 18vw;
+	width: 120px;
+	padding-bottom: 10px;
+	max-width: 18vw;
 }
 
 .central-content h2 {
-    color: white;
-    font-size: 40pt;
-    line-height: 40pt;
-    margin-top: 0px;
-    font-family: menuFont;
-    font-weight:50 !important;
+	color: white;
+	font-size: 40pt;
+	line-height: 40pt;
+	margin-top: 0px;
+	font-family: menuFont;
+	font-weight: 50 !important;
 }
 
 .footer {
-    box-shadow: none;
-    padding-left: 0;
-    padding-right: 0;
+	box-shadow: none;
+	padding-left: 0;
+	padding-right: 0;
 }
 
 .footer-content {
-    padding-left: 0px;
-    padding-right: 0px;
-    background-color: #F3E5D2;
-    font-family: menuFont;
+	padding-left: 0px;
+	padding-right: 0px;
+	background-color: #f3e5d2;
+	font-family: menuFont;
 }
 
 .footer .footer-content .container-footer {
-    padding-top: 42px;
-    padding-bottom: 42px;
-    font-family: menuFont;
+	padding-top: 42px;
+	padding-bottom: 42px;
+	font-family: menuFont;
 }
 
 .footer .footer-content .container-footer .row {
-    display:flex;
-    padding-bottom:40pt;
+	display: flex;
+	padding-bottom: 40pt;
 }
 
 .row-footer {
-    flex: 0 0 25%;
+	flex: 0 0 25%;
 }
 
 .footerh1 {
-    margin-top: 7px !important;
-    font-size: 25pt;
-    line-height: 40pt;
+	margin-top: 7px !important;
+	font-size: 25pt;
+	line-height: 40pt;
 }
 
 .footerHeader {
-    font-size: 20pt;
-    line-height: 22pt;
-    margin-bottom: 7px;
-    margin-top: 7px !important;
-    font-family: titleBold;
+	font-size: 20pt;
+	line-height: 22pt;
+	margin-bottom: 7px;
+	margin-top: 7px !important;
+	font-family: titleBold;
 }
 
 a.footerLink {
-    display:block;
-    text-align: left;
-    font-size:15pt;
+	display: block;
+	text-align: left;
+	font-size: 15pt;
 }
 
 .copyright-content {
-    display:block;
-    text-align: center;
-    margin:0;
+	display: block;
+	text-align: center;
+	margin: 0;
 }
 
 @font-face {
-    font-family: menufont;
-    src: url(../font/gt-walsheim-regular.ttf);
-    font-weight: 500;
-    }
+	font-family: menufont;
+	src: url(../font/gt-walsheim-regular.ttf);
+	font-weight: 500;
+}
 @font-face {
-    font-family: titlebold;
-    src: url(../font/Clearface-Bold.ttf);
-    }
+	font-family: titlebold;
+	src: url(../font/Clearface-Bold.ttf);
+}
