--- a/jennifer/css/mental.css
+++ b/jennifer/css/mental.css
@@ -1,6 +1,9 @@
 .magazine-health {
 	display: grid;
-	grid-template-columns: auto auto auto;
+	  grid-template-columns: 200px 200px;
+  grid-row: auto auto;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
 	/*! background-color: #2196f3; */
 	padding-top: 10px;
 }
