--- a/jennifer/css/style.css
+++ b/jennifer/css/style.css
@@ -141,7 +141,7 @@ a.read-more:hover {
 .content-aboutus h2 {
 	font-size: 28pt;
 	line-height: 28pt;
-	font-size: menuFont;
+	font-size: titleBold;
 	font-weight: 300 !important;
 }
 
@@ -223,16 +223,16 @@ a.read-more:hover {
 .footer .footer-content .container-footer .row {
 	display: flex;
 	padding-bottom: 40pt;
-}
-
-.row-footer {
-	flex: 0 0 25%;
+	justify-content: space-between;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 .footerh1 {
-	margin-top: 7px !important;
+	/*! margin-top: 7px !important; */
 	font-size: 25pt;
 	line-height: 40pt;
+	margin: 0;
 }
 
 .footerHeader {
@@ -249,12 +249,6 @@ a.footerLink {
 	font-size: 15pt;
 }
 
-.copyright-content {
-	display: block;
-	text-align: center;
-	margin: 0;
-}
-
 @font-face {
 	font-family: menufont;
 	src: url(../font/gt-walsheim-regular.ttf);
@@ -263,4 +257,73 @@ a.footerLink {
 @font-face {
 	font-family: titlebold;
 	src: url(../font/Clearface-Bold.ttf);
+}
+
+.newsletter-form {
+	display: flex;
+	/*! justify-content: space-between; */
+	flex-direction: row;
+	/*! justify-content: space-between; */
+	/*! flex-basis: 25%; */
+}
+
+.email-input {
+	background-color: transparent;
+	border: none;
+	border-bottom-color: currentcolor;
+	border-bottom-style: none;
+	border-bottom-width: medium;
+	border-bottom-color: currentcolor;
+	border-bottom-style: none;
+	border-bottom-width: medium;
+	border-bottom: 1px solid #121116;
+	border-radius: 0 !important;
+	margin: 0 !important;
+	font-size: 16px;
+	text-transform: capitalize;
+	color: #121116;
+	font-weight: 400;
+	height: 42.5px;
+	width: 180px;
+}
+
+.email-submit {
+	background-color: transparent;
+	border: none;
+	border-bottom: 1px solid #121116;
+	border-radius: 0 !important;
+	margin: 0 !important;
+	font-size: 16px;
+	text-transform: capitalize;
+	color: #121116;
+	font-weight: 400;
+	height: 42.5px;
+	cursor: pointer;
+}
+
+.subscribe-btn {
+	padding-top: 2.5px;
+}
+
+.copyright {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-bottom: 50px;
+}
+
+.copyright p {
+	margin: 0;
+}
+
+.copyright-content {
+	display: flex;
+	flex-direction: column;
+}
+
+.icon-social {
+	display: flex;
+	justify-content: space-between;
 }
