--- a/jennifer/css/style.css
+++ b/jennifer/css/style.css
@@ -327,3 +327,60 @@ a.footerLink {
 	display: flex;
 	justify-content: space-between;
 }
+
+ul.topnav li.icon {
+	display: none;
+}
+
+@media screen and (max-width: 480px) {
+	html,
+	body {
+		width: 100%;
+		overflow-x: hidden;
+	}
+	ul.topnav li {
+		display: none;
+	}
+	ul.topnav li.icon {
+		display: inline-block;
+	}
+	ul.topnav.responsive {
+		position: relative;
+	}
+	ul.topnav.responsive li.icon {
+		position: absolute;
+		right: 0;
+		top: 0;
+	}
+	ul.topnav.responsive li {
+		float: none;
+		display: inline;
+	}
+	ul.topnav.responsive li a {
+		display: block;
+		text-align: left;
+	}
+	.footer .footer-content .container-footer .row {
+		display: block;
+		padding-bottom: 40pt;
+		justify-content: space-between;
+		padding-left: 10px;
+		padding-right: 10px;
+		text-align: center;
+	}
+
+	.newsletter-form {
+		display: flex;
+		justify-content: center;
+	}
+
+	.flex-content .image {
+		background-size: cover;
+		height: auto;
+	}
+
+	.flex-content .content {
+		padding-top: 0%;
+		padding-bottom: 10%;
+	}
+}
