--- a/jennifer/css/style.css
+++ b/jennifer/css/style.css
@@ -1,6 +1,10 @@
+html,
 body {
+	width: 100%;
+	overflow-x: hidden;
 	margin: 0;
 }
+
 .search {
 	position: absolute;
 	width: auto !important;
@@ -119,7 +123,17 @@ a {
 .flex-content .content .content-fill {
 	font-family: menuFont;
 	font-size: 20px;
-	padding-bottom: 20px;
+	text-align: left;
+	padding: 20px;
+	margin: 0;
+}
+
+.content-creator {
+	font-family: menuFont;
+	font-size: 20px;
+	text-align: left;
+	padding-left: 20px;
+	margin-top: 0;
 }
 
 a.read-more {
@@ -218,6 +232,8 @@ a.read-more:hover {
 	padding-top: 42px;
 	padding-bottom: 42px;
 	font-family: menuFont;
+	margin-left: 5px;
+	margin-right: 5px;
 }
 
 .footer .footer-content .container-footer .row {
@@ -321,6 +337,8 @@ a.footerLink {
 .copyright-content {
 	display: flex;
 	flex-direction: column;
+	margin-left: 5px;
+	margin-right: 5px;
 }
 
 .icon-social {
@@ -330,6 +348,14 @@ a.footerLink {
 
 ul.topnav li.icon {
 	display: none;
+}
+
+.menu-responsive {
+	display: none;
+}
+
+.all-content {
+	min-height: calc(100vh - 45px - 90px);
 }
 
 @media screen and (max-width: 480px) {
@@ -376,12 +402,26 @@ ul.topnav li.icon {
 
 	.flex-content .image {
 		background-size: cover;
-		height: auto;
+		height: 30vh;
+		width: 100%;
+	}
+	.container-fluid .content-fluid {
+		display: block;
+	}
+
+	.panel-tile {
+		max-width: 100%;
+	}
+
+	.flex-content {
+		display: block;
 	}
 
 	.flex-content .content {
 		padding-top: 0%;
 		padding-bottom: 10%;
+		display: block;
+		width: 100%;
 	}
 	.subscribe-btn {
 		padding-top: 3px;
@@ -396,5 +436,22 @@ ul.topnav li.icon {
 	.icon-social div {
 		display: flex;
 		padding: 5px;
+	}
+
+	.menu .menu-content {
+		display: none;
+	}
+
+	.search {
+		display: none;
+	}
+	.menu-responsive {
+		display: block;
+		text-align: left;
+		padding-top: 0;
+	}
+
+	.menu.menu-responsive .menu-content {
+		display: block;
 	}
 }
