--- a/jennifer/css/style.css
+++ b/jennifer/css/style.css
@@ -56,7 +56,7 @@ body {
 	list-style: none;
 	color: black;
 	padding: 10px;
-	text-align: center;
+	text-align: left;
 	font-family: menufont;
 	font-size: 20px;
 	position: relative;
@@ -78,13 +78,13 @@ a {
 }
 
 .flex-content {
-	display: flex;
+	/*! display: flex; */
 	justify-content: space-between;
 	padding-top: 15px;
 }
 
 .flex-content .image {
-	width: 50%;
+	width: 100%;
 	background-image: url('https://shine.snugdesigns.co.uk/wp-content/uploads/2019/08/annie-spratt-1365775-unsplash-1000x1000.jpg');
 	background-size: 100%;
 	/*! height: 800px; */
@@ -92,6 +92,26 @@ a {
 	background-repeat: no-repeat;
 	background-position: center;
 	animation: slideshow 10s linear infinite;
+	position: relative;
+}
+.more-stories {
+	display: block;
+}
+
+.button-stories {
+	/*! margin: 25px auto; */
+	display: block;
+	font-family: serif;
+	padding: 15px 30px;
+	color: black;
+	cursor: pointer;
+	transition: all 0.4s ease;
+	background: transparent;
+	border: 12px solid black;
+	border-image: url('../images/border.png') 30 round;
+	font-family: menuFont;
+	font-size: 15px;
+	margin-left: 40%;
 }
 
 @keyframes slideshow {
@@ -213,6 +233,7 @@ a.read-more:hover {
 	margin-top: 0px;
 	font-family: menuFont;
 	font-weight: 50 !important;
+	margin-bottom: 15px;
 }
 
 .footer {
@@ -321,7 +342,40 @@ a.footerLink {
 	padding-top: 2.5px;
 }
 
+/* new footer */
 .copyright {
+	display: flex;
+	flex-direction: column;
+	padding-left: 10px;
+}
+.copyright-content p {
+	margin: 0;
+}
+.copyright-menu-content p {
+	padding-right: 10px;
+}
+
+.copyright-menu {
+	display: flex;
+	flex-direction: row;
+}
+
+.all-copyright {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.social-media {
+	display: flex;
+	flex-direction: row;
+}
+
+.social-media div {
+	width: 10vh;
+}
+
+/* .copyright {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -339,7 +393,7 @@ a.footerLink {
 	flex-direction: column;
 	margin-left: 5px;
 	margin-right: 5px;
-}
+} */
 
 .icon-social {
 	display: flex;
@@ -356,6 +410,37 @@ ul.topnav li.icon {
 
 .all-content {
 	min-height: calc(100vh - 45px - 90px);
+}
+
+.image .up-breath {
+	position: absolute;
+	bottom: -10vh;
+	right: 50px;
+	font-size: 50px;
+}
+
+.up-breath span {
+	padding-left: 20px;
+}
+.menu-content ul li ul {
+	display: none;
+}
+.menu-content ul li:hover ul {
+	padding: 10px;
+	cursor: pointer;
+	display: flex;
+	flex-direction: column;
+	position: absolute;
+	background-color: white;
+	z-index: 2;
+}
+
+.content-aboutus a:hover {
+	text-decoration: underline;
+}
+
+.central-content a:hover {
+	text-decoration: underline;
 }
 
 @media screen and (max-width: 480px) {
