--- a/jennifer/css/style.css
+++ b/jennifer/css/style.css
@@ -457,11 +457,13 @@ ul.topnav li.icon {
 	}
 	ul.topnav.responsive {
 		position: relative;
+		padding-top: 2vh;
 	}
 	ul.topnav.responsive li.icon {
 		position: absolute;
 		right: 0;
 		top: 0;
+		left: 0;
 	}
 	ul.topnav.responsive li {
 		float: none;
@@ -470,6 +472,8 @@ ul.topnav li.icon {
 	ul.topnav.responsive li a {
 		display: block;
 		text-align: left;
+		padding-left: 5px;
+		padding-top: 10px;
 	}
 	.footer .footer-content .container-footer .row {
 		display: block;
@@ -500,6 +504,7 @@ ul.topnav li.icon {
 
 	.flex-content {
 		display: block;
+		padding-top: 8vh;
 	}
 
 	.flex-content .content {
@@ -531,12 +536,56 @@ ul.topnav li.icon {
 		display: none;
 	}
 	.menu-responsive {
-		display: block;
+		display: inline-block;
 		text-align: left;
+		padding-top: 0;
+	}
+
+	.menu {
 		padding-top: 0;
 	}
 
 	.menu.menu-responsive .menu-content {
 		display: block;
+	}
+
+	.all-copyright {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.copyright-menu {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.social-media {
+		padding-top: 5vh;
+		padding-left: 5vh;
+	}
+	.copyright-menu-content p {
+		margin: 0;
+	}
+
+	.title h2 {
+		margin: 0;
+		position: absolute;
+		top: 0;
+		left: 25vh;
+	}
+	.icon a {
+		position: absolute;
+		right: 0;
+		top: 0;
+		left: 0;
+		padding-left: 5px;
+		padding-top: 10px;
+	}
+
+	.icon-next {
+		position: absolute;
+		top: 2vh;
+		left: 6%;
+		list-style-type: none;
 	}
 }
