modify all responsive page & modify menubar and footer (footer not all page)

--- a/jennifer/css/about.css
+++ b/jennifer/css/about.css
@@ -79,4 +79,11 @@
 		padding-left: 0px;
 		padding-bottom: 0px;
 	}
+	.content-about img {
+		width: 100vw;
+	}
+
+	.flex-about {
+		padding-top: 10%;
+	}
 }
