--- a/jennifer/css/mental.css
+++ b/jennifer/css/mental.css
@@ -7,10 +7,9 @@
 
 .grid-item {
 	background-image: url('https://themindmap.co.uk/wp-content/uploads/2020/01/DSC06391-1.jpg');
-	border: 1px solid rgba(0, 0, 0, 0.8);
 	padding: 20px;
 	font-size: 30px;
-	height: 20vw;
+	height: 25vw;
 	background-position: center;
 	text-align: center;
 }
@@ -23,10 +22,10 @@
 
 .text-grid {
 	border: 1px solid rgba(0, 0, 0, 0.8);
-	padding-top: 20px;
+	padding-top: 50px;
 	padding-bottom: 20px;
 	font-size: 30px;
-	height: 20vw;
+	height: 20;
 	background-position: center;
 	text-align: center;
 	background-color: #ed9c9d;
@@ -69,12 +68,11 @@
 	display: block;
 	font-family: serif;
 	padding: 15px 30px;
-	color: black;
+	color: white;
 	cursor: pointer;
 	transition: all 0.4s ease;
 	background: transparent;
-	border: 12px solid black;
-	border-image: url('../images/border.png') 30 round;
+	border: 2px solid white;
 	font-family: menuFont;
 	font-size: 15px;
 }
