--- a/jennifer/css/stories_click.css
+++ b/jennifer/css/stories_click.css
@@ -2,8 +2,14 @@
 	display: block;
 }
 
-.stories-image img {
+.stories-image {
 	width: 100%;
+	background-image: url('../images/stories-click-image1.jpg');
+	background-size: 100%;
+	height: 800px;
+	height: 45vw;
+	background-repeat: no-repeat;
+	background-position: left;
 }
 
 .stories-text {
@@ -50,6 +56,8 @@
 	font-family: menuFont, Arial, Helvetica, sans-serif;
 	font-size: 20px;
 	font-weight: 300;
+	letter-spacing: 1px;
+	margin-bottom: 40px;
 }
 
 .page-container h6 {
@@ -67,8 +75,32 @@
 	margin-top: 20px;
 }
 
+.style-left {
+	font-size: 50px;
+	text-align: left !important;
+}
+
 .button-stories {
 	font-family: titleBold;
+}
+
+.more-stories-click {
+	display: block;
+	padding-left: 13.5%;
+}
+.button-stories-click {
+	display: block;
+	font-family: serif;
+	padding: 15px 30px;
+	color: black !important;
+	cursor: pointer;
+	transition: all 0.4s ease;
+	background: transparent;
+	border: 2px solid black !important;
+	font-family: menuFont;
+	font-size: 18px !important;
+	margin-left: 0 !important;
+	margin-bottom: 40px !important;
 }
 
 @font-face {
