--- a/jennifer/css/style.css
+++ b/jennifer/css/style.css
@@ -103,15 +103,14 @@ a {
 	display: block;
 	font-family: serif;
 	padding: 15px 30px;
-	color: black;
+	color: white;
 	cursor: pointer;
 	transition: all 0.4s ease;
 	background: transparent;
-	border: 12px solid black;
-	border-image: url('../images/border.png') 30 round;
+	border: 2px solid white;
 	font-family: menuFont;
 	font-size: 15px;
-	margin-left: 40%;
+	margin-left: 55%;
 }
 
 /* @keyframes slideshow {
@@ -175,7 +174,7 @@ a.read-more:hover {
 .content-aboutus h2 {
 	font-size: 28pt;
 	line-height: 28pt;
-	font-size: titleBold;
+	font-family: titleBold;
 	font-weight: 300 !important;
 }
 
@@ -209,13 +208,13 @@ a.read-more:hover {
 	/*! max-width: 50%; */
 	max-width: 50%;
 	flex: 50%;
+	height: 100vh;
 }
 
 .central-content {
 	width: 100%;
 	text-align: center;
-	padding-top: 120px;
-	padding-bottom: 120px;
+	padding-top: 25vh;
 	position: relative;
 	top: 10%;
 }
@@ -418,6 +417,8 @@ ul.topnav li.icon {
 	bottom: -5vh;
 	right: 50px;
 	font-size: 50px;
+	font-family: menuFont;
+	text-align: right;
 }
 
 .up-breath span {
@@ -441,6 +442,10 @@ ul.topnav li.icon {
 }
 
 .central-content a:hover {
+	text-decoration: underline;
+}
+
+.topnav ul li:hover {
 	text-decoration: underline;
 }
 
@@ -572,7 +577,8 @@ ul.topnav li.icon {
 		margin: 0;
 		position: absolute;
 		top: 0;
-		left: 25vh;
+		width: 100%;
+		text-align: center;
 	}
 	.icon a {
 		position: absolute;
