--- a/jennifer/css/mental.css
+++ b/jennifer/css/mental.css
@@ -21,7 +21,7 @@
 }
 
 .text-grid {
-	border: 1px solid rgba(0, 0, 0, 0.8);
+	/*! border: 1px solid rgba(0, 0, 0, 0.8); */
 	padding-top: 50px;
 	padding-bottom: 20px;
 	font-size: 30px;
@@ -36,6 +36,7 @@
 	padding: 100px;
 	font-family: menufont;
 	font-size: 40px;
+	color: white;
 }
 
 .item2 {
