--- a/jennifer/css/stories_click.css
+++ b/jennifer/css/stories_click.css
@@ -48,7 +48,8 @@
 .page-container h2 {
 	font-family: titleBold;
 	/*! display: block; */
-	text-align: center;
+	text-align: left;
+	font-size: 35px;
 }
 
 .page-container p {
@@ -96,7 +97,7 @@
 	cursor: pointer;
 	transition: all 0.4s ease;
 	background: transparent;
-	border: 2px solid black !important;
+	/*! border: 2px solid black !important; */
 	font-family: menuFont;
 	font-size: 18px !important;
 	margin-left: 0 !important;
