--- a/jennifer/css/stories_click.css
+++ b/jennifer/css/stories_click.css
@@ -87,7 +87,7 @@
 
 .more-stories-click {
 	display: block;
-	padding-left: 13.5%;
+	padding-left: 13vw;
 }
 .button-stories-click {
 	display: block;
@@ -121,5 +121,12 @@
 	}
 	.page-container {
 		margin-left: 0;
+	}
+	.page-content {
+		padding-top: 20%;
+	}
+
+	.more-stories-click {
+		padding-left: 0.5%;
 	}
 }
