--- a/jennifer/css/style.css
+++ b/jennifer/css/style.css
@@ -110,7 +110,8 @@ a {
 	border: 2px solid white;
 	font-family: menuFont;
 	font-size: 15px;
-	margin-left: 55%;
+	margin-left: 58%;
+	margin-top: 5%;
 }
 
 /* @keyframes slideshow {
