--- a/portofolio/css/styles.css
+++ b/portofolio/css/styles.css
@@ -45,6 +45,10 @@ html, body {
     width: 25%;
 }
 
+.height-100 {
+    height: 100%;
+}
+
 .background-color-black {
     background-color: black;
     height: 2px;
@@ -150,6 +154,18 @@ html, body {
     transform: scale(1.5) !important;
 }
 
+.background-none {
+    background: none;
+}
+
+.border-none {
+    border: none
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
 @media screen and (min-width: 572px) and (max-width: 768px) {
     .padding-bottom-2em {
         padding-bottom: 2em;
@@ -207,5 +223,11 @@ html, body {
 @media screen and (max-width: 381px) {
     .width-100 {
         width: 100%;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .height-auto {
+        height: auto !important;
     }
 }
