--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,29 @@
+a {
+    color: white;
+}
+
+a:hover {
+    color:white;
+}
+
+.padding-top5em {
+    padding-top: 5em;
+}
+
+
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+   }
+   
+.carousel-control-next-icon {
+     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+   }
+
 html, body {
     font-family: FontAwesome;
     scroll-behavior: smooth;
+    background-color: #201f1f;
+    color: white;
 }
 
 .row {
@@ -45,6 +68,14 @@ html, body {
     width: 25%;
 }
 
+.width-70 {
+    width: 70%;
+}
+
+.width-1em {
+    width: 1em;
+}
+
 .height-100 {
     height: 100%;
 }
@@ -54,11 +85,16 @@ html, body {
     height: 2px;
 }
 
+.background-color-white {
+    background-color: white;
+    height: 2px;
+}
+
 .title-education::after {
     content: "";
     display: block;
     width: 50%;
-    border: 2px solid black;
+    border: 2px solid white;
     margin: auto;
     margin-top: 10px;
 }
@@ -203,14 +239,9 @@ html, body {
     }
     
     .my-project img {
-        transition: transform 1s, filter 2s;
-        filter: blur(0);
-        transform: scale(1.02);
     }
     
     .my-project:hover img {
-        filter: blur(2px) brightness(50%);
-        transform: scale(1);
     }
 }
 
